<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#2DE580" >

        <TextView
            style="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="公众服务平台"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/imagebtn_userdetatail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/server_personal_info" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20px"
                android:layout_weight="1"
                android:background="@drawable/common_main_bng"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/find_buiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableTop="@drawable/find_buiness"
                    android:gravity="center"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:text="@string/find_buiness"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20px"
                android:layout_weight="1"
                android:background="@drawable/common_main_bng"
                android:gravity="center_horizontal"
                android:orientation="horizontal" 
                android:visibility="gone">

                <TextView
                    android:id="@+id/start_thing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableTop="@drawable/start_thing"
                    android:gravity="center"
                    android:text="@string/start_thing"
                     android:drawablePadding="10dp"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20px"
                android:layout_weight="1"
                android:background="@drawable/common_main_bng"
                android:gravity="center_horizontal"
                android:orientation="horizontal" 
                android:visibility="gone">

                <TextView
                    android:id="@+id/my_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20px"
                    android:drawableTop="@drawable/my_buy"
                    android:gravity="center_horizontal"
                    android:text="@string/my_buy"
                     android:drawablePadding="10dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20px"
                android:layout_weight="1"
                android:background="@drawable/common_main_bng"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20px"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:drawableTop="@drawable/setting"
                    android:gravity="center_horizontal"
                    android:text="@string/setting"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:layout_gravity="bottom"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_20px"
                android:layout_weight="1"
           
                android:gravity="center_horizontal"            
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"               
                    android:layout_gravity="bottom"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="@dimen/margin_20px"
                    android:text="@string/copyright_buiness"
                    android:textSize="20sp"
                    android:textColor="@color/gray" />
            </LinearLayout>

          
        </LinearLayout>
    </LinearLayout>

</LinearLayout>